--- a/src/oss/test/Makefile
+++ b/src/oss/test/Makefile
@@ -1,7 +1,11 @@
-BINS=TestOss
+BINS=TestOss TestListObjects
 
 TestOss: TestOss.cpp
 	g++ -D__STDC_FORMAT_MACROS ../*.cpp ../../net/*.cpp ../../log/*.cpp ../../util/*.cpp ../../http/*.cpp ../../codec/*.cpp ../../digest/*.cpp ../../xml/*.cpp $? -I ../../../include/ -I/usr/include/libxml2 -pg -o $@ -lpthread -lssl -lxml2
+
+TestListObjects: TestListObjects.cpp
+	g++ -D__STDC_FORMAT_MACROS ../*.cpp ../../net/*.cpp ../../log/*.cpp ../../util/*.cpp ../../http/*.cpp ../../codec/*.cpp ../../digest/*.cpp ../../xml/*.cpp $? -I ../../../include/ -I/usr/include/libxml2 -pg -o $@ -lpthread -lssl -lxml2
+
 
 clean:
 	rm -f $(BINS)
