PutObject, HeadObject, DelObject

--- a/src/oss/test/Makefile
+++ b/src/oss/test/Makefile
@@ -1,4 +1,4 @@
-BINS=TestOss TestListObjects
+BINS=TestOss TestListObjects TestPutObject TestHeadObject TestDelObject
 
 TestOss: TestOss.cpp
 	g++ -D__STDC_FORMAT_MACROS ../*.cpp ../../net/*.cpp ../../log/*.cpp ../../util/*.cpp ../../http/*.cpp ../../codec/*.cpp ../../digest/*.cpp ../../xml/*.cpp $? -I ../../../include/ -I/usr/include/libxml2 -pg -o $@ -lpthread -lssl -lxml2
@@ -6,6 +6,15 @@ TestOss: TestOss.cpp
 TestListObjects: TestListObjects.cpp
 	g++ -D__STDC_FORMAT_MACROS ../*.cpp ../../net/*.cpp ../../log/*.cpp ../../util/*.cpp ../../http/*.cpp ../../codec/*.cpp ../../digest/*.cpp ../../xml/*.cpp $? -I ../../../include/ -I/usr/include/libxml2 -pg -o $@ -lpthread -lssl -lxml2
 
+
+TestPutObject: TestPutObject.cpp
+	g++ -D__STDC_FORMAT_MACROS ../*.cpp ../../net/*.cpp ../../log/*.cpp ../../util/*.cpp ../../http/*.cpp ../../codec/*.cpp ../../digest/*.cpp ../../xml/*.cpp $? -I ../../../include/ -I/usr/include/libxml2 -pg -o $@ -lpthread -lssl -lxml2
+
+TestHeadObject: TestHeadObject.cpp
+	g++ -D__STDC_FORMAT_MACROS ../*.cpp ../../net/*.cpp ../../log/*.cpp ../../util/*.cpp ../../http/*.cpp ../../codec/*.cpp ../../digest/*.cpp ../../xml/*.cpp $? -I ../../../include/ -I/usr/include/libxml2 -pg -o $@ -lpthread -lssl -lxml2
+
+TestDelObject: TestDelObject.cpp
+	g++ -D__STDC_FORMAT_MACROS ../*.cpp ../../net/*.cpp ../../log/*.cpp ../../util/*.cpp ../../http/*.cpp ../../codec/*.cpp ../../digest/*.cpp ../../xml/*.cpp $? -I ../../../include/ -I/usr/include/libxml2 -pg -o $@ -lpthread -lssl -lxml2
 
 clean:
 	rm -f $(BINS)
