--- a/src/oss/test/Makefile
+++ b/src/oss/test/Makefile
@@ -1,4 +1,4 @@
-BINS=TestOss TestListObjects TestPutObject TestHeadObject TestDelObject TestGetObject
+BINS=TestOss TestListObjects TestPutObject TestHeadObject TestDelObject TestGetObject TestCopyObject
 
 TestOss: TestOss.cpp
 	g++ -D__STDC_FORMAT_MACROS ../*.cpp ../../net/*.cpp ../../log/*.cpp ../../util/*.cpp ../../http/*.cpp ../../codec/*.cpp ../../digest/*.cpp ../../xml/*.cpp $? -I ../../../include/ -I/usr/include/libxml2 -pg -o $@ -lpthread -lssl -lxml2
@@ -17,6 +17,9 @@ TestDelObject: TestDelObject.cpp
 	g++ -D__STDC_FORMAT_MACROS ../*.cpp ../../net/*.cpp ../../log/*.cpp ../../util/*.cpp ../../http/*.cpp ../../codec/*.cpp ../../digest/*.cpp ../../xml/*.cpp $? -I ../../../include/ -I/usr/include/libxml2 -pg -o $@ -lpthread -lssl -lxml2
 
 TestGetObject: TestGetObject.cpp
+	g++ -D__STDC_FORMAT_MACROS ../*.cpp ../../net/*.cpp ../../log/*.cpp ../../util/*.cpp ../../http/*.cpp ../../codec/*.cpp ../../digest/*.cpp ../../xml/*.cpp $? -I ../../../include/ -I/usr/include/libxml2 -pg -o $@ -lpthread -lssl -lxml2
+
+TestCopyObject: TestCopyObject.cpp
 	g++ -D__STDC_FORMAT_MACROS ../*.cpp ../../net/*.cpp ../../log/*.cpp ../../util/*.cpp ../../http/*.cpp ../../codec/*.cpp ../../digest/*.cpp ../../xml/*.cpp $? -I ../../../include/ -I/usr/include/libxml2 -pg -o $@ -lpthread -lssl -lxml2
 
 clean:
